# contextful-gui

./: .gitignore  README.md
app/: AGENTS.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
app/scripts/: legacy-project-smoke.py  (+10 more)
app/sidecar/: README.md  build.py  pyproject.toml
app/sidecar/src/contextful_sidecar/: __init__.py  __main__.py  server.py
app/sidecar/src/contextful_sidecar/runtime/: __init__.py  activity.py  agent.py  agent_state.py  agents.py  chat.py  eventlog.py  file_text.py  guard.py  index_agent.py  indexing.py  module_config.py  openrouter.py  preview.py  repo_path_policy.py  repo_walk.py  runs.py  schema.py  ssrf_guard.py  step_log.py  supabase.py  tool_runner.py  tool_skips.py  tool_trace.py  tools.py  transcription.py  transient.py  write_policy.py
app/sidecar/tests/: e2e_offline.py  legacy_fixture.py  smoke.py  test_activity.py  test_agent_early_exit.py  test_agent_stuck_resume.py  test_agentic_reindex.py  test_gather_context.py  test_gather_run_history.py  test_guard.py  test_hardening.py  test_index_quality.py  test_indexing.py  test_invariants.py  test_legacy_index.py  test_message_cap.py  test_module_config.py  test_openrouter_retry.py  test_preview.py  test_repo_path_policy.py  test_run_error_log.py  test_scan_debug.py  test_sidecar_rpc.py  test_supabase.py  test_tool_trace.py  test_tools_grep_read.py  test_transcription.py  test_workspace_index.py
app/src-tauri/: Cargo.toml  entitlements.plist  installer-hooks.nsh  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: git_credentials.rs  github_cli.rs  indexing.rs  jobs.rs  lib.rs  main.rs  prereqs.rs  secrets.rs  settings.rs  sidecar.rs  workspace.rs
(+57 files in other folders)
