[project]
name = "contextful-sidecar"
version = "1.2.27"
description = "Contextful NDJSON stdio sidecar: agent loop + tools over OpenRouter."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "certifi>=2025.1.31",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.20.0"]
dev = ["pytest>=9.0.3"]

[project.scripts]
contextful-sidecar = "contextful_sidecar.__main__:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "contextful_sidecar"
module-root = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
